Added subscribe form

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>Soccer</title>
+	<script src="static/js/vanilla-masker.min.js"></script>
 	<!-- built style files will be auto injected -->
 </head>
 <body>
